fix: zip folders, footer visibility on mobile, copying on mac

--- a/static/styles.css
+++ b/static/styles.css
@@ -12,7 +12,7 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     text-align: center;
 }
@@ -35,6 +35,7 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 .buttons {
@@ -77,4 +78,9 @@ button:hover {
 
 footer {
     padding: 20px;
+    position: fixed; /* Ensure the footer stays visible */
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    background-color: #1e2337; /* Same as body background to blend in */
 }
